@@ -1,79 +1,63 @@
 package com.webshop.webshop.controller;
 
 import com.webshop.webshop.DTO.KimUserDTO;
+import com.webshop.webshop.config.SecurityConfig;
 import com.webshop.webshop.model.KimUser;
 import com.webshop.webshop.service.KimUserService;
 import lombok.RequiredArgsConstructor;
+import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.security.access.prepost.PreAuthorize;
+import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/user")
 @RequiredArgsConstructor
 public class KimUserController {
 
+    @Autowired
+    private PasswordEncoder encoder;
     private final KimUserService kimUserService;
 
-    @PostMapping
-    public ResponseEntity<KimUserDTO> createUser(@RequestBody KimUserDTO kimUserDTO) {
-        try {
-            return new ResponseEntity<KimUserDTO>(kimUserService.save(kimUserDTO), HttpStatus.CREATED);
-        } catch (Exception e) {
-            return new ResponseEntity<KimUserDTO>(HttpStatus.INTERNAL_SERVER_ERROR);
-        }
+    @PostMapping("/add")
+    public ResponseEntity<KimUserDTO> createKimUser(@RequestBody KimUserDTO kimUserDTO) {
+        kimUserDTO.setUserPassword(encoder.encode(kimUserDTO.getUserPassword()));
+        return new ResponseEntity<>(kimUserService.save(kimUserDTO).convertToDto(), HttpStatus.CREATED);
     }
 
-    @PreAuthorize("hasRole('ADMIN')")
+
+    //@PreAuthorize("hasRole('ADMIN')")
     @GetMapping("/get/{id}")
-    public ResponseEntity<KimUserDTO> getUser(@PathVariable Long id) {
+    public ResponseEntity<KimUserDTO> findUserById(@PathVariable Long id) {
         return new ResponseEntity<>(kimUserService.findById(id).convertToDto(), HttpStatus.OK);
     }
 
-    @PreAuthorize("hasRole('ADMIN')")
+    //@PreAuthorize("hasRole('ADMIN')")
     @GetMapping("/all")
-    public ResponseEntity<List<KimUserDTO>> getAllUser() {
-        return new ResponseEntity<>(kimUserService.getAllUser()
-                .stream()
+    public ResponseEntity<List<KimUserDTO>> findAll() {
+        List<KimUser> allUsers = kimUserService.findAll();
+        return new ResponseEntity<>(allUsers.stream()
                 .map(KimUser::convertToDto)
-                .toList(),
+                .collect(Collectors.toList()),
                 HttpStatus.OK);
     }
 
-    @PreAuthorize("hasRole('ADMIN')")
-    @PutMapping("/{itemId}")
-    public ResponseEntity<KimUserDTO> updateUserById(@RequestBody KimUserDTO kimUserDTO, @PathVariable Long itemId) {
-        KimUserDTO updatedUser = kimUserService.update(itemId, kimUserDTO);
+    //@PreAuthorize("hasRole('ADMIN')")
+    @PutMapping("/{id}")
+    public ResponseEntity<KimUserDTO> updateUserById(@RequestBody KimUserDTO kimUserDTO, @PathVariable Long id) {
+        KimUserDTO updatedUser = kimUserService.update(id, kimUserDTO);
         return new ResponseEntity<>(updatedUser, HttpStatus.OK);
     }
 
-    @PreAuthorize("hasRole('ADMIN')")
+    //@PreAuthorize("hasRole('ADMIN')")
     @DeleteMapping("/delete/{id}")
     public void deleteUser(@PathVariable Long id) {
         kimUserService.deleteById(id);
     }
-
-    /*
-    example: JSON input for creating a new user
-        {
-                "userName":"Mais",
-                "userPassword":"1234",
-                "eMail":"abd@def.com",
-                "userRole":"ADMIN",
-                "gender":"m",
-                "firstName":"Michael",
-                "lastName":"Mayr",
-                "address":{
-                    "street":"Hauptstrasse",
-                    "number":"25",
-                    "zip":1200,
-                    "city":"Wien",
-                    "country":"Austria"
-            }
-        }
-    */
 
 }
